<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/padding_6dp"
    app:cardCornerRadius="@dimen/tab_radius"
    app:strokeColor="@color/black"
    app:strokeWidth="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/back_item_grid"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_title_item_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dela_gothic_one"
            android:gravity="start"
            android:padding="@dimen/padding_6dp"
            android:textColor="@color/ui_black"
            android:textSize="@dimen/size_text_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/title_item_home" />

        <TextView
            android:id="@+id/tv_calories_item_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa"
            android:gravity="start"
            android:paddingStart="@dimen/padding_6dp"
            android:textColor="@color/ui_black"
            android:textSize="@dimen/btn_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_item_home"
            tools:text="@string/calorie_item_home" />

        <TextView
            android:id="@+id/tv_date_item_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:fontFamily="@font/comfortaa"
            android:gravity="end"
            android:textColor="@color/ui_black"
            android:textSize="@dimen/et_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_calories_item_home"
            tools:text="@string/date" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>