<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_login"
    tools:context=".ui.fragments.login.LogInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_vertical"
            android:fontFamily="@font/dela_gothic_one"
            android:gravity="center"
            android:paddingVertical="@dimen/padding_vertical"
            android:text="@string/registration"
            android:textColor="@color/black"
            android:textSize="@dimen/size_text_registration" />

        <EditText
            android:id="@+id/et_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_vertical"
            android:autofillHints=""
            android:background="@drawable/et_oval"
            android:fontFamily="@font/comfortaa"
            android:hint="@string/name"
            android:inputType="textMultiLine|textCapSentences"
            android:padding="@dimen/padding_vertical"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/et_text_size"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/btn_skip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_vertical"
            android:background="@drawable/et_oval"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/comfortaa"
            android:paddingVertical="@dimen/padding_vertical"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/btn_text_size" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>